# bearing

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  bearing.py  compressor.py  eval_agent.py  eval_compare.py  eval_runner.py  executor.py  planner_prompt.md  pyproject.toml  relevance.py  status_writer.py  tasks.json  tasks_schema.py
.claude/: settings.local.json
benchmark/: .gitignore  CLAUDE.md  README.md  package.json  tasks.json
benchmark/src/: index.js
examples/: tasks.json
